:ambulance: fix medias slider overflow step details

--- a/inertia/assets/css/components/_medias-slider.scss
+++ b/inertia/assets/css/components/_medias-slider.scss
@@ -2,6 +2,7 @@
 
 .medias-slider {
   position: relative;
+  width: 100%;
 
   &--small {
     height: 180px;
